Update views showing trash:/ when restoring trashed files.

Thanks to A.J.Reddy for the investigation and initial patch, and thanks
to Frank Reininghaus for the testing.
FIXED-IN: 4.10.1
BUG: 252483